--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "db": "json-server db.json --routes routes.json"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.5",
     "dayjs": "^1.11.10",
     "json-server": "^1.0.0-alpha.21",
     "nanoid": "^5.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
