--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.5",
     "dayjs": "^1.11.10",
+    "humanize-duration": "^3.31.0",
     "json-server": "^1.0.0-alpha.21",
     "nanoid": "^5.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.3",
     "react-icons": "^4.12.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2"
