--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.5",
     "dayjs": "^1.11.10",
+    "history": "^5.3.0",
     "humanize-duration": "^3.31.0",
     "json-server": "^1.0.0-alpha.21",
     "nanoid": "^5.0.4",
